--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -41,16 +41,20 @@
     <div id="jqueryTab" class="fieldset-group">
       <fieldset id="assignUsers">
         <legend><span><%= _("Assign Users")%></span></legend>
-	  <div id="rolesContainer">
+    <div id="rolesContainer">
 	    <div id="rolesContent" class="round5b">
+
 	      <% @roles.each do |role| %>
-		<div class="role">
-		  <span class="roleHeader"  style="vertical-align:middle;">
+
+		<div id="<%= role.name %>" class="role">
+		  <span class="roleHeader">
 		    <label><img class="role" src="../images/key-grey.png"><%= role.name%></label>
+		    <span id="<%= role.name %>-warning" class="user-warning-message">
+		      <%= _("User already assigned") %>
+		    </span>
 		    <%= link_to image_tag("../images/delete-user.png", :border=>0, :class=>"deleteRole"), {:action => 'destroy', :id => ERB::Util.html_escape( role.name ) }, { :style=>"border:0px;"} %>
 		  </span>
 		  <span class="roleBody drop">
-		    <span class="roles_warning" style="display:none; float:left;"><%= _("User already assigned to this role") %></span>
 		    <%=hidden_field_tag(RolesController.users_role_id(role.name), role.users.join(",") ) %>
 		    <% role.users.each do |user| %>
 		      <span class="user assigned" alt="<%=RolesController.users_role_id(role.name)%>"><%=user%></span>
@@ -64,9 +68,9 @@
 
     <div id="roles_tipsy_tooltip" style="display:none;">
       <div style="float:left; width:70px;">
-        <span id="infoMark">!</span>
+        <span id="infoMark" class="info">!</span>
       </div>
-      <div style="float:right; min-width:200px; width:300px;">
+      <div id="tooltip_message_container">
         <label class="info_text"> <%= _("In order to assign the user to roles,")%></label>
         <label class="info_text"> <%= _("Drag and Drop the user labels into Role containers") %></label>
         <label class="info_text"><a id="dont_show" href=""><%= _("Don't show this again") %></a></label>
@@ -75,17 +79,7 @@
     </div>
 
 
-	 <div id="usersContainer"
-	    original-title='<div id="roles_tipsy_tooltip">
-	      <div style="float:left; width:70px;">
-  	      <span id="infoMark">!</span>
-	      </div>
- 	      <div style="float:right; min-width:200px; width:300px;">
-	        <label class="info_text"> <%= _("In order to assign the user to roles,")%></label>
-	        <label class="info_text"> <%= _("Drag and Drop the user labels into Role containers") %></label>
-	      </div>
- 	      <span class="clearfix"></span>
-        </div>'>
+	 <div id="usersContainer">
 	  <div id="usersContent" class="users round5b">
 	    <div class="slider-content">
 	      <ol>
@@ -146,7 +140,7 @@
                       <% end %>
                     </div>
                   <% end %>
-		  <div style="clear:both"></div>
+                  <div style="clear:both"></div>
                 </div>
               </div>
             <% end %>
@@ -291,9 +285,9 @@
   </script>
 
   <% content_for :head do %>
-  	<%= javascript_include_tag "webyast-localstorage" %>
     <% if JSMIN != true %>
-     	<%= javascript_include_tag "select_dialog", "jquery.event.drag-2.0.min", "jquery.event.drop-2.0.min", "jquery.qsearch", "roles.helper", "slidernav" %>
+      <%= javascript_include_tag "select_dialog", "jquery.event.drag-2.0.min", "jquery.event.drop-2.0.min", "jquery.qsearch", "slidernav", "webyast-roles" %>
+      <%= stylesheet_link_tag "webyast-roles" %>
      <% end %>
   <% end%>
 </div>
