--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -79,16 +79,18 @@
 <div class="plugin-content plugin-border">
 
   <% form_target_save = '/registration/' + (@nexttarget.kind_of?(String) ? @nexttarget : 'skip') %>
-    <div class="plugin-header" style="margin:0px 10px;">
-      <div class="left">
-        <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/registration.png"></label>
-        <label class="plugin-name"><%=_("Registration")%></label>
-        <span id="questionMark" style="margin:2px 0px; float:right; clear:right;">?</span>
-     	</div>
+    <div class="webyast_form">
+      <div class="plugin-header">
+        <div class="left">
+          <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/registration.png"></label>
+          <label class="plugin-name"><%=_("Registration")%></label>
+       </div>
+       <div class="right" >
+         <span id="questionMark" class="right" style="margin:2px 5px;">?</span>
+       </div>
+       <div class="clearfix"></div>
+     </div>
     </div>
-
-    <div class="clearfix">&nbsp;</div>
-
 
   <% if @showstatus then %>
     <div class="webyast_form">
